# Autoware

ros/src/actuation/libs/vehicle_abstraction/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/src/actuation/libs/vehicle_abstraction/include/: can_driver.hpp  can_msg.hpp  vehicle_abstraction.hpp
ros/src/actuation/libs/vehicle_abstraction/src/vehicle_abstraction/: can_driver.cpp  can_vehicle_cmd_msg.cpp  can_vehicle_state_msg.cpp
